# MoleculaeXR

./: CMakeLists.txt  main.cpp
include/core/: Vision.hpp  Window.hpp
res/shaders/: fragment_shader.glsl  fragment_shader_bg.glsl  vertex_shader_bg.glsl
src/core/: Vision.cpp  Window.cpp
src/renderer/: Mesh.cpp
